--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <li><a href="https://filedn.com/lXdPRR7Cm4sS1CrBdrFaEkX/Ong%20Teaching/Ong%20Profile%20v2.mp4">About</a>
           <ul>
             <li><a href="https://filedn.com/lXdPRR7Cm4sS1CrBdrFaEkX/SCHOOL%20TAUGHT/sch%20taught%20new%20v3.htm">MoeSch</a></li>
-            <li><a href="https://www.youtube.com/@ongahhuatjimmy6863/videos">A</a></li>
+            <li><a href="https://filedn.com/lXdPRR7Cm4sS1CrBdrFaEkX/cv/About%20me.pdfs">CV</a></li>
             <li><a href="https://sites.google.com/view/jimmyctr/web-site/thunkable?authuser=0">B</a></li>
           </ul>
         </li>
