--- a/index.html
+++ b/index.html
@@ -91,9 +91,12 @@
 
 <body>
   <header>
-    <div class="logo">
-      <img src="https://filedn.com/lXdPRR7Cm4sS1CrBdrFaEkX/CAMROLL/Jimmy_Logo%20only.png" alt="Company Logo">
-    </div>
+  <div class="logo">
+  <a href="https://filedn.com/lXdPRR7Cm4sS1CrBdrFaEkX/VisualSCode/MB_IOT/index.html">
+    <img src="https://filedn.com/lXdPRR7Cm4sS1CrBdrFaEkX/CAMROLL/Jimmy_Logo%20only.png" alt="Company Logo">
+  </a>
+</div>
+
     <nav>
       <ul>
         <li><a href="https://sites.google.com/view/jimmyctr/tutoring?authuser=0">Home</a></li>
