--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <ul>
             <li><a href="https://filedn.com/lXdPRR7Cm4sS1CrBdrFaEkX/SCHOOL%20TAUGHT/sch%20taught%20new%20v3.htm">MoeSch</a></li>
             <li><a href="https://filedn.com/lXdPRR7Cm4sS1CrBdrFaEkX/cv/About%20me.pdf">CV</a></li>
-            <li><a href="https://sites.google.com/view/jimmyctr/web-site/thunkable?authuser=0">B</a></li>
+            <li><a href="https://padlet.com/smartyinvestor/e-learning-and-e-socialising-53mu7ygouxrz7hm2">Padlet</a></li>
           </ul>
         </li>
         <li><a href="#">Courses</a>
